--- a/index.html
+++ b/index.html
@@ -10,8 +10,27 @@
 </head>
 
 <body>
+    <form class="container">
+        <label for="task-name">Task:</label>
+        <input type="text" id="task-name">
+        <ul class="categories">
+            <li><input class="radio-input" type="radio" name="category" value="general" id="category-general"> <label
+                    for="category-general">general</label></li>
+            <li><input class="radio-input" type="radio" name="category" value="gym" id="category-gym"> <label
+                    for="category-gym">gym</label>
+            </li>
+            <li><input class="radio-input" type="radio" name="category" value="hobby" id="categoryhobbyl"> <label
+                    for="categoryhobbyl">hobby</label></li>
+            <li><input class="radio-input" type="radio" name="category" value="work" id="category-work"> <label
+                    for="category-work">work</label></li>
+        </ul>
+        <button class="add-button">Add</button>
+        <p>Todo:</p>
+        <ul class="tasks-list">
 
-    <script src="/dist/app.js"></script>
+        </ul>
+    </form>
+    <script type="module" src="/dist/app.js"></script>
 </body>
 
 </html>
